--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,15 @@
   --red: #cf3c3f;
 }
 
+main {
+  display: 	flex;
+}
+
 .login {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   max-width: 500px;
   min-width: 100vh;
@@ -35,45 +40,166 @@
 }
 
 .login-title {
-    color: var(--deep-grey);
-    font-size: 1.5em;
-    margin-bottom: 30px;
+  color: var(--deep-grey);
+  font-size: 1.5em;
+  margin-bottom: 30px;
 }
 
-.login-label{
-    width: 100%;
-    display: block;
-    margin-bottom: 25px;
+.login-label {
+  width: 100%;
+  display: block;
+  margin-bottom: 25px;
 }
 
 .input {
-    width: 100%;
-    background-color: var(--light-grey);
-    border: 2px solid rgba(0, 0, 0 , 0);
-    border-radius: 5px;
-    outline: none;
-    font-size: 0.9em;
-    padding: 25px 10px 10px;
-    font-weight: 600;
-    color: var(--deep-grey)
+  width: 100%;
+  background-color: var(--light-grey);
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 5px;
+  outline: none;
+  font-size: 0.9em;
+  padding: 25px 10px 10px;
+  font-weight: 600;
+  color: var(--deep-grey);
 }
 
-.login-label span{
-    position: absolute;
-    font-size: 0.8em;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: var(--medium-grey);
-    margin: 20px;
-    cursor: text;
+.login-label span {
+  position: absolute;
+  font-size: 0.8em;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--medium-grey);
+  margin: 20px;
+  cursor: text;
+  transition: all 200ms ease;
 }
 
 .input:focus {
-    background-color: var(--whitesmoke);
-    border: 2px solid var(--deep-grey);
+  background-color: var(--whitesmoke);
+  border: 2px solid var(--deep-grey);
 }
 
-.login-label .span-active{
-    font-size: 0.7em;
-    margin: 8px 10px;
+.login-label .span-active {
+  font-size: 0.7em;
+  margin: 8px 10px;
+}
+
+.login-btns {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.login-btns img {
+  width: 20px;
+}
+
+.icon-btn {
+  width: 33.33%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+}
+
+.login-btns .icon-btn:nth-child(1) {
+  background-color: var(--blue);
+}
+
+.login-btns .icon-btn:nth-child(2) {
+  background-color: var(--light-grey);
+}
+
+.login-btns .icon-btn:nth-child(3) {
+  background-color: var(--black);
+}
+
+.login-label-check {
+  width: 100%;
+  margin: 15px 0px 50px;
+  font-size: 0.9em;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+
+.input-chceck {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: var(--light-grey);
+  margin-right: 8px;
+  border-radius: 3px;
+}
+
+.input-chceck:checked {
+  background-color: var(--red);
+}
+
+.input-chceck:checked::after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 10px;
+  border: 30px solid white;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
+  margin: 2px 6px;
+}
+
+.login-btn {
+  width: 60px;
+  height: 60px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  background-color: var(--red);
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 60px;
+}
+
+.login-btn svg {
+  fill: white;
+
+}
+
+.login-btn:disabled {
+  background-color: white;
+  cursor: auto;
+  border: 2px solid var(--light-grey);
+}
+
+.login-btn:disabled svg {
+  fill: var(--grey)
+}
+
+.login-link{
+  font-size: 0.8em;
+  text-decoration: none;
+  color: var(--medium-grey);
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  font-weight: 700;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.wallpaper {
+  width: 100%;
+  background: url('./images/wallpaper.jpg');
+  background-size: cover;
+  background-position: center;
+  flex: 1;
 }
